--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -30,18 +30,47 @@
         </nav>
       </div>
     </header>
-    <main>
-      {% block content %}
-      <h2>Welcome to Sasquatch Custom Leather</h2>
-      <p class="body italic">
-        This site is still under construction. Come back later for custom-made
-        leather products.
-      </p>
-      <p>To contact us, please <a href="">click here.</a></p>
-      {% endblock%}
-    </main>
+    <div id="wrapper">
+      <main>
+        {% block content %}
+        <h2>Welcome to Sasquatch Custom Leather</h2>
+        <p class="italic">
+          This site is still under construction. Come back later for custom-made
+          leather products.
+        </p>
+        <p>To contact us, please <a href="">click here.</a></p>
+        {% endblock%}
+      </main>
+      <div id="sidebar">
+        <p>Like Sasquatch on Facebook</p>
+        <div class="fb-page"
+             data-href="https://www.facebook.com/sasquatchcustomleather/"
+             data-width="200" data-height="250"
+             data-small-header="false"
+             data-adapt-container-width="true"
+             data-hide-cover="false"
+             data-show-facepile="true">
+          <blockquote cite="https://www.facebook.com/sasquatchcustomleather/"
+                      class="fb-xfbml-parse-ignore">
+            <a href="https://www.facebook.com/sasquatchcustomleather/">
+              Sasquatch Custom Leather LLC
+            </a>
+          </blockquote>
+        </div>
+      </div>
+    </div>
     <footer>
-
+      <small>&copy; 2017. Site by Cory Swainston.</small>
     </footer>
   </body>
+  <div id="fb-root"></div>
+  <script>
+    (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.11&appId=1927132944188097';
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+  </script>
 </html>
