--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sasquatch Custom Leather</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quattrocento+Sans" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
